@@ -750,6 +750,14 @@ void udp_socket::bind(udp::endpoint const& ep, error_code& ec)
 	{
 		m_ipv4_sock.open(udp::v4(), ec);
 		if (ec) return;
+
+		// this is best-effort. ignore errors
+		error_code err;
+#ifdef TORRENT_WINDOWS
+		m_ipv4_sock.set_option(exclusive_address_use(true), err);
+#endif
+		m_ipv4_sock.set_option(socket_acceptor::reuse_address(true), err);
+
 		m_ipv4_sock.bind(ep, ec);
 		if (ec) return;
 		udp::socket::non_blocking_io ioc(true);
@@ -765,10 +773,17 @@ void udp_socket::bind(udp::endpoint const& ep, error_code& ec)
 		if (is_any(ep.address())) ep6.address(address_v6::any());
 		m_ipv6_sock.open(udp::v6(), ec);
 		if (ec) return;
-#ifdef IPV6_V6ONLY
-		m_ipv6_sock.set_option(v6only(true), ec);
-		ec.clear();
+
+		// this is best-effort. ignore errors
+		error_code err;
+#ifdef TORRENT_WINDOWS
+		m_ipv4_sock.set_option(exclusive_address_use(true), err);
 #endif
+		m_ipv4_sock.set_option(socket_acceptor::reuse_address(true), err);
+#ifdef IPV6_V6ONLY
+		m_ipv6_sock.set_option(v6only(true), err);
+#endif
+
 		m_ipv6_sock.bind(ep6, ec);
 		if (ec) return;
 		udp::socket::non_blocking_io ioc(true);
